--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "broccoli": "^0.16.9",
+    "broccoli-babel-transpiler": "^5.5.0",
     "broccoli-cli": "^1.0.0",
     "broccoli-funnel": "^1.0.1"
   }
