--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "broccoli": "^0.16.9",
     "broccoli-babel-transpiler": "^5.5.0",
     "broccoli-cli": "^1.0.0",
-    "broccoli-funnel": "^1.0.1"
+    "broccoli-concat": "^2.1.0",
+    "broccoli-funnel": "^1.0.1",
+    "broccoli-merge-trees": "^1.1.1"
   }
 }
