--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "broccoli-cli": "^1.0.0",
     "broccoli-concat": "^2.1.0",
     "broccoli-funnel": "^1.0.1",
-    "broccoli-merge-trees": "^1.1.1"
+    "broccoli-merge-trees": "^1.1.1",
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4"
   }
 }
